Fix flickering of table and graph (#32)
The hashes which were used to only update the tables and
graphs were mishandled and triggered an update always.
Also removed from display the transport tabs which are not implemented
yet.

--- a/yukon/html/monitor/table_style.css
+++ b/yukon/html/monitor/table_style.css
@@ -46,6 +46,10 @@ td {
   word-wrap: break-word;
 }
 
+td.no-padding {
+  padding: 1px;
+}
+
 th button {
   margin-left: 0.5em;
 }
@@ -57,5 +61,6 @@ td input {
   background-color: #fff;
   font-size: 0.875rem;
   text-align: left;
-  padding: 4;
+  padding: 7;
+  outline: none;
 }
